# main.py

./: .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  helpme.sh  pyproject.toml  quickhost.conf  requirements.txt  setup.cfg  setup.py  source-aliases
.github/workflows/: main.yaml
blog/: blog-2022-04-25.md  blog-2022-04-26.md  blog-2022-05-04.md  blog-2022-05-05.md  blog-2022-05-11.md  blog-2022-05-15.md  blog-2022-05-16.md  blog-2022-05-17.md  blog-2022-05-18.md  blog-2022-05-21.md  blog-2022-05-22.md  blog-2022-05-23.md  blog-2022-05-24.md  blog-2022-05-25.md  blog-2022-05-26.md  blog-2022-05-31.md  blog-2022-06-07.md  blog-2022-06-15.md  blog-2022-06-22.md  blog-2022-06-27.md  blog-2022-06-29.md  blog-2022-06-30.md  blog-2022-07-02.md  blog-2022-07-03.md  blog-2022-07-06.md  blog-2022-07-07.md  blog-2022-07-08.md  blog-2022-07-09.md  blog-2022-07-12.md  blog-2022-07-19.md  blog-2022-09-01.md  blog-2022-09-22.md  blog-2022-10-20.md
faux-quickhost-plugins/: setup.py
faux-quickhost-plugins/aws/: setup.py
faux-quickhost-plugins/aws/src/: __init__.py  temp_data_collector.py
faux-quickhost-plugins/aws/src/quickhost_aws/: AWSHost.py  AWSKeypair.py  __init__.py
plugins/: .gitignore
src/quickhost/: AWSApp.py  AWSConfig.py  AWSHost.py  AWSKeypair.py  Cli.py  CliClasses.py  QuickhostPlugin.py  SG.py  __init__.py  cli_params.py  constants.py  quickhost_app_base.py  temp_data_collector.py  utilities.py
src/scripts/: main.py
tests/: test_aws_cli_args.py  test_aws_config.py  test_aws_sg.py  test_plugin.py  test_todo.py  test_utilities.py
tests/data/: another_test_aws_config.conf  test_aws_config.conf
tests/fixtures/: fixt_aws_cli.py  sg_client_responses.py
userdatas/: ubuntu-website.sh
