[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "quickhost"
version = "0.0.1"
authors = [
  { name="zeebrow", email="zeebrow@zeebrow.io" },
]
description = "Start a publically available webhost, quickly."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zeebrow/quickhost"
Issues = "https://github.com/zeebrow/quickhost/issues"

[flake8]
ignore = E501
exclude =
  .git,
  __pycache__,
  venv*,
  build,
  tmp,
  dist,
