[metadata]
name = quickhost
version = 0.0.1

[options]
install_requires = 
  boto3
  importlib-metadata; python_version >= "3.10"

[options.entry_points]
console_scripts = 
  quickhost = scripts:main

[tool.setuptools.packages.find]
where = ['src/quickhost']

[flake8]
ignore = E501
exclude=
  .git,
  __pycache__,
  venv*,
  build,
  tmp,
