[metadata]
name = quickhost
version = 0.0.2

[options]
python_requires = >=3.10
install_requires = 
  importlib-metadata; python_version>="3.10"

[options.entry_points]
console_scripts = 
  quickhost = scripts:main

[tool.setuptools.packages.find]
where = ['src/quickhost']

[flake8]
ignore = E501
exclude =
  .git,
  __pycache__,
  venv*,
  build,
  tmp,
  dist,
